update  package.json

--- a/RatioCalculator/Assets/ratio-calculator/package.json
+++ b/RatioCalculator/Assets/ratio-calculator/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "com.rngtm.ratio-caltulator",
+    "name": "com.rngtm.unityeditor-ratiocaltulator",
     "displayName": "Ratio Caltulator", 
     "version": "1.0.0",               
     "unity": "2021.1",
