--- a/RatioCalculator/Assets/ratio-calculator/package.json
+++ b/RatioCalculator/Assets/ratio-calculator/package.json
@@ -1,5 +1,6 @@
 {
-    "name": "com.rngtm.unityeditor-ratiocaltulator",
+    "name": "com.rngtm.ratio-caltulator",
+    "package.json-name": "https://github.com/rngtm/UnityEditor-RatioCalculator.git", 
     "displayName": "Ratio Caltulator", 
     "version": "1.0.0",               
     "unity": "2021.1",
