--- a/RatioCalculator/Assets/ratio-calculator/Editor/RatioCalculator.asmdef
+++ b/RatioCalculator/Assets/ratio-calculator/Editor/RatioCalculator.asmdef
@@ -1,3 +1,15 @@
 {
-	"name": "RatioCalculator"
+    "name": "RatioCalculator",
+    "references": [],
+    "optionalUnityReferences": [],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": []
 }
